@@ -3,6 +3,11 @@
 
 1.3-30
 
+* `gam.fit3' now traps derivative iteration divergence, and suggests 
+  tightening the convergence tolerance `epsilon' in `gam.control'. 
+  Divergence can happen for ill-conditioned models if the PIRLS has 
+  not converged sufficiently.
+
 * `magic' and helpfile modified slightly to pick up number of smoothing 
    parameters to estimate solely from `S' list - still user responsibility 
    to ensure `sp' and `S' dimensions correspond.        
